[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
+++ b/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
@@ -410,6 +410,8 @@ nodes.push({
 
 ### G6.registerNode
 
+完整的生命周期：https://antv-g6.gitee.io/zh/docs/api/registerItem/#%E7%94%A8%E6%B3%95
+
 G6.registerNode(nodeType, config, extendShape);
 
 - `nodeType` (字符串): 表示节点类型的名称。
@@ -523,6 +525,75 @@ graph.on('node:mouseenter', (ev) => {
     content: label, // 弹框内容，可以是 HTML 字符串
   });
 });
+```
+
+## draw和afterDraw有什么区别
+
+在 AntV G6 中，`draw` 和 `afterDraw` 是节点生命周期的两个阶段，分别对应节点的创建和绘制过程。
+
+1. **`draw` 阶段：** 在 `draw` 阶段，你可以定义节点的基本形状和属性，但这时候节点的图形元素还没有真正添加到画布上。这个阶段用于创建节点的图形元素。
+2. **`afterDraw` 阶段：** 在 `afterDraw` 阶段，节点的图形元素已经添加到画布上。在这个阶段，你可以进一步对图形元素进行操作，比如添加文本、动画效果等。这个阶段用于对已创建的图形元素进行额外的定制。
+
+```js
+import G6 from '@antv/g6';
+
+G6.registerNode('custom-node', {
+  draw(cfg, group) {
+    // 在 draw 阶段创建图形元素
+    const shape = group.addShape('rect', {
+      attrs: {
+        x: 0,
+        y: 0,
+        width: 80,
+        height: 40,
+        fill: '#5B8FF9',
+      },
+    });
+
+    // 将创建的图形元素保存在 group 中，以便在 afterDraw 阶段继续操作
+    group.set('customShape', shape);
+
+    return shape;
+  },
+  afterDraw(cfg, group) {
+    // 在 afterDraw 阶段对已创建的图形元素进行额外的操作
+    const shape = group.get('customShape');
+
+    // 添加文本
+    group.addShape('text', {
+      attrs: {
+        x: 40,
+        y: 20,
+        textAlign: 'center',
+        textBaseline: 'middle',
+        text: cfg.label || 'Label',
+        fill: '#fff',
+      },
+    });
+  },
+});
+
+// 创建图形实例
+const graph = new G6.Graph({
+  container: 'container',
+  width: 800,
+  height: 600,
+  modes: {
+    default: ['drag-node'], // 允许拖拽节点
+  },
+});
+
+// 添加自定义节点
+graph.add('node', {
+  id: 'node1',
+  x: 100,
+  y: 100,
+  shape: 'custom-node', // 使用自定义节点类型
+  label: 'Custom Node',
+});
+
+// 渲染图形
+graph.render();
 ```
 
 
