[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
+++ b/docs/frontend/React/4.前端常见解决方案/前端拓扑图方案.md
@@ -352,6 +352,17 @@ graph.fitView();
 
 ### radial布局-辐射布局
 
+### grid布局
+
+```js
+{
+  preventOverlap: false,// 是否防止重叠，必须配合属性 nodeSize ，只有设置了与当前图节点大小相同的 nodeSize 值，才能够进行节点重叠的碰撞检测。若未设置 nodeSize ，则将根据节点数据中的 size 进行碰撞检测。若二者都未设置，则默认以 30 为节点大小进行碰撞检测
+  
+}
+```
+
+
+
 
 
 ## Node节点
@@ -451,6 +462,25 @@ G6.registerNode(
 );
 ```
 
+### 增加图片
+
+```js
+draw(cfg, group) {
+                        // 自定义图形的绘制逻辑
+                        return group.addShape("image", {
+                            attrs: {
+                                x: 0,
+                                y: 0,
+                                width: 35,
+                                height: 35,
+                                img: "/static/asstes/computer.svg", // 设置自定义图片的 URL
+                            },
+                        });
+                    },
+```
+
+
+
 ### afterDraw
 
 afterDraw(cfg, group)
@@ -458,6 +488,9 @@ afterDraw(cfg, group)
 afterDraw方法是自定义节点绘制后执行的回调函数，该函数有两个参数：`cfg` 和 `group`。
 
 - `cfg` 是一个包含节点数据的对象。这个对象包含了节点的各种属性，例如节点的位置 (`x`, `y`)、颜色、大小、标签等。在 `afterDraw` 函数中，你可以通过 `cfg` 来获取节点的配置信息，以便根据这些信息进行绘制或执行其他操作。
+
+  ![image-20231225161056401](https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20231225161056401.png)
+
 - `group` 是一个 G6 的图形分组（group）对象。这个分组对象是用于包装节点中的图形元素，例如圆形、矩形等。通过 `group`，你可以向节点中添加新的图形元素，如在上述例子中添加的圆形。
 
 
