--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -86,3 +86,64 @@ const renderFunc = () => h('div', 'xxx')
 当ref的参数是非常大且具有深层次嵌套的数组对象时，可能会导致性能问题。
 
 **使用 `shallowRef`**: 如果您有一个数组对象，而不需要追踪对象属性的变化，可以使用 `shallowRef` 而不是 `ref`。`shallowRef` 只会追踪对象本身的变化，而不会深度追踪嵌套对象的属性。
+
+
+
+## watch
+
+侦听一个 getter 函数：
+
+```ts
+const state = reactive({ count: 0 })
+watch(
+  () => state.count,
+  (count, prevCount) => {
+    /* ... */
+  }
+)
+```
+
+侦听一个 ref：
+
+```ts
+const count = ref(0)
+watch(count, (newVal, oldVal) => {
+  /* ... */
+}, {
+  deep: true,
+  immediate: true
+})
+```
+
+
+
+## computed
+
+```ts
+const count = ref(1)
+const plusOne = computed({
+  get: () => count.value + 1,
+  set: (val) => {
+    count.value = val - 1
+  }
+})
+```
+
+
+
+## toRefs
+
+解构reactive创建的对象会丢失响应性
+
+toRefs的作用就是将一个响应式对象转换为一个普通对象，这个普通对象的每个属性都是指向源对象相应属性的 ref。
+
+```js
+const proxyObj = reactive({
+  x: 0,
+  y: 0
+});
+
+const { x, y } = toRefs(proxyObj);
+// 这样解构出来的x，y都是 Ref<number> 类型的
+```
+
