[build] docs: update

--- a/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
+++ b/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
@@ -97,6 +97,8 @@ console.log(readersNumber); //
 
 <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20230221155644672.png" alt="image-20230221155644672" style="zoom:70%;" />
 
+## reactive源码
+
 ### 被reactive() 包装的变量
 
 ```js
@@ -126,6 +128,100 @@ setup(prop,context){
 context：
 
 <img src="https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20210420114335981.png" alt="image-20210420114335981" style="zoom:67%;" />
+
+
+
+```ts
+function reactive(target) {
+  if (isReadonly(target)) {
+    return target;
+  }
+  return createReactiveObject(
+    target,
+    false,
+    mutableHandlers,
+    mutableCollectionHandlers,
+    reactiveMap
+  );
+}
+```
+
+我们来看**createReactiveObject**
+
+- `target`: 要创建代理的目标对象。
+- `isReadonly2`: 一个标志，表示是否是只读的代理。
+- `baseHandlers`: 基本操作的处理器对象。
+- `collectionHandlers`: 集合类型操作的处理器对象。
+
+- `proxyMap`: 用于缓存已创建的代理对象的 Map。
+
+```ts
+function createReactiveObject(target, isReadonly2, baseHandlers, collectionHandlers, proxyMap) {
+  // 首先，检查 target 是否是一个对象，如果不是对象，则直接返回 target
+  if (!isObject(target)) {
+    {
+      console.warn(`value cannot be made reactive: ${String(target)}`);
+    }
+    return target;
+  }
+  // 检查 target 是否已经有 __v_raw 属性，并且是否是只读的响应式对象。如果是，则直接返回 target
+  if (target["__v_raw"] && !(isReadonly2 && target["__v_isReactive"])) {
+    return target;
+  }
+  // 检查 proxyMap 中是否已经存在 target 对应的代理对象，如果存在，则直接返回缓存的代理对象
+  const existingProxy = proxyMap.get(target);
+  if (existingProxy) {
+    return existingProxy;
+  }
+  // 获取 target 的类型，使用 getTargetType 函数
+  // 返回一个枚举值。targetType 的类型可能是 0（INVALID，无效）、1（COMMON，普通对象）、2（COLLECTION，集合类型）。
+  const targetType = getTargetType(target);
+  if (targetType === 0 /* INVALID */) {
+    return target;
+  }
+  const proxy = new Proxy(
+    target,
+    targetType === 2 /* COLLECTION */ ? collectionHandlers : baseHandlers
+  );
+  proxyMap.set(target, proxy);
+  return proxy;
+}
+```
+
+这里的baseHandlers和collectionHandlers对应上面的 **mutableHandlers** 和 **mutableCollectionHandlers**
+
+```ts
+const mutableHandlers = {
+  get: get$1,
+  set: set$1,
+  deleteProperty,
+  has: has$1,
+  ownKeys
+};
+const get$1 = /* @__PURE__ */ createGetter();
+const set$1 = /* @__PURE__ */ createSetter();
+
+const mutableCollectionHandlers = {
+  get: /* @__PURE__ */ createInstrumentationGetter(false, false)
+};
+function createInstrumentationGetter(isReadonly, shallow) {
+  const instrumentations = shallow ? isReadonly ? shallowReadonlyInstrumentations : shallowInstrumentations : isReadonly ? readonlyInstrumentations : mutableInstrumentations;
+  return (target, key, receiver) => {
+    if (key === "__v_isReactive") {
+      return !isReadonly;
+    } else if (key === "__v_isReadonly") {
+      return isReadonly;
+    } else if (key === "__v_raw") {
+      return target;
+    }
+    return Reflect.get(
+      hasOwn(instrumentations, key) && key in target ? instrumentations : target,
+      key,
+      receiver
+    );
+  };
+}
+```
 
 
 
@@ -237,6 +333,69 @@ function createGetter(isReadonly = false, shallow = false) {
 
 这里createGetter返回了一个get函数，结合上面，createGetter就是重写了Proxy的get方法
 
+## computed源码
+
+`computed` 函数接受三个参数：`getterOrOptions`、`debugOptions`、`isSSR`。其中：
+
+- `getterOrOptions` 可以是一个函数（只有 getter）或包含 `get` 和 `set` 方法的对象。
+- `debugOptions` 是调试选项对象，包含 `onTrack` 和 `onTrigger` 回调函数。
+- `isSSR` 表示是否在服务端渲染环境中。
+
+```ts
+function computed(getterOrOptions, debugOptions, isSSR = false) {
+  let getter;
+  let setter;
+  // 如果 getterOrOptions 是一个函数，说明只有 getter，将其赋给 getter 变量，并且为 setter 变量赋一个警告函数，用于提醒用户 computed 属性是只读的。
+  const onlyGetter = isFunction(getterOrOptions);
+  if (onlyGetter) {
+    getter = getterOrOptions;
+    setter = () => {
+      console.warn("Write operation failed: computed value is readonly");
+    } ;
+  } else {
+    getter = getterOrOptions.get;
+    setter = getterOrOptions.set;
+  }
+  const cRef = new ComputedRefImpl(getter, setter, onlyGetter || !setter, isSSR);
+  if (debugOptions && !isSSR) {
+    cRef.effect.onTrack = debugOptions.onTrack;
+    cRef.effect.onTrigger = debugOptions.onTrigger;
+  }
+  return cRef;
+}
+
+class ComputedRefImpl {
+  constructor(getter, _setter, isReadonly, isSSR) {
+    this._setter = _setter;
+    this.dep = void 0;
+    this.__v_isRef = true;
+    this["__v_isReadonly"] = false;
+    this._dirty = true;
+    this.effect = new ReactiveEffect(getter, () => {
+      if (!this._dirty) {
+        this._dirty = true;
+        triggerRefValue(this);
+      }
+    });
+    this.effect.computed = this;
+    this.effect.active = this._cacheable = !isSSR;
+    this["__v_isReadonly"] = isReadonly;
+  }
+  get value() {
+    const self = toRaw(this);
+    trackRefValue(self);
+    if (self._dirty || !self._cacheable) {
+      self._dirty = false;
+      self._value = self.effect.run();
+    }
+    return self._value;
+  }
+  set value(newValue) {
+    this._setter(newValue);
+  }
+}
+```
+
 
 
 ### toRaw()返回原始数据
@@ -252,34 +411,6 @@ console.log(obj); // {name: "zs", age: 18}
 ### toReadonly()包装的变量
 
 toReadonly也会将变量包装成一个Proxy对象
-
-
-
-### [watchEffect](https://vue3js.cn/docs/zh/api/computed-watch-api.html#watcheffect)
-
-#### watchEffect与watch❓
-
-- `watchEffect` 不需要指定监听的属性，他会自动的收集依赖， 只要我们回调中引用到了 响应式的属性， 那么当这些属性变更的时候，这个回调都会执行，而 `watch` 只能监听指定的属性而做出变更(v3开始可以同时指定多个)。
-
-- 第二点就是 watch 可以获取到新值与旧值（更新前的值），而 `watchEffect` 是拿不到的。
-
-  ```js
-  watch:{
-    someValue(newValue,oldValue){
-      // ...
-    }
-  }
-  ```
-
-- 第三点是 watchEffect 如果存在的话，在组件初始化的时候就会执行一次用以收集依赖（与`computed`同理），而后收集到的依赖发生变化，这个回调才会再次执行，而 watch 不需要，因为他一开始就指定了依赖。
-
-
-
-
-
-### toRef和toRefs
-
-如果想让响应式数据和以前的数据关联起来，并且更新响应式数据之后还不想更新 UI，那么就可以使用 toRef
 
 
 
