--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -115,7 +115,34 @@ watch(count, (newVal, oldVal) => {
 })
 ```
 
+侦听一组数据
 
+```ts
+const count = ref<number>(100);
+const count1 = ref<number>(200);
+
+watch([count, count1], (newVal, oldVal) => {
+  console.log('newVal: ', newVal, oldVal);
+});
+```
+
+### [watchEffect](https://vue3js.cn/docs/zh/api/computed-watch-api.html#watcheffect)
+
+#### watchEffect与watch❓
+
+- `watchEffect` 不需要指定监听的属性，他会自动的收集依赖， 只要我们回调中引用到了 响应式的属性， 那么当这些属性变更的时候，这个回调都会执行，而 `watch` 只能监听指定的属性而做出变更(v3开始可以同时指定多个)。
+
+- 第二点就是 watch 可以获取到新值与旧值（更新前的值），而 `watchEffect` 是拿不到的。
+
+  ```js
+  watch:{
+    someValue(newValue,oldValue){
+      // ...
+    }
+  }
+  ```
+
+- 第三点是 watchEffect 如果存在的话，在组件初始化的时候就会执行一次用以收集依赖（与`computed`同理），而后收集到的依赖发生变化，这个回调才会再次执行，而 watch 不需要，因为他一开始就指定了依赖。
 
 ## computed
 
@@ -129,21 +156,39 @@ const plusOne = computed({
 })
 ```
 
+computed函数的第二个参数 debugOptions 包含俩个回调函数
 
+- `onTrack` 将在响应属性或引用作为依赖项被跟踪时被调用。
+- `onTrigger` 将在侦听器回调被依赖项的变更触发时被调用。
 
-## toRefs
+## toRef和toRefs
 
-解构reactive创建的对象会丢失响应性
+当对一个reactive对象解构时，其内的属性会丢失响应性（如果属性是一个对象，则不会丢失响应性，除非继续解构）
 
-toRefs的作用就是将一个响应式对象转换为一个普通对象，这个普通对象的每个属性都是指向源对象相应属性的 ref。
-
-```js
-const proxyObj = reactive({
-  x: 0,
-  y: 0
+```ts
+const state = reactive({
+  count: 1,
+  message: 'Hello',
+  obj: {
+    count: 100
+  }
 });
 
-const { x, y } = toRefs(proxyObj);
-// 这样解构出来的x，y都是 Ref<number> 类型的
+const {
+  count,
+  obj: { count: count1 }
+} = state;
+```
+
+这个时候，使用toRefs包裹reactive对象，则解构出来的属性不会丢失响应性，解构出来的每个属性都是一个ref
+
+```ts
+const { count } = toRefs(state); // count: Ref<number>
+```
+
+而toRef则是针对某一个属性解构
+
+```ts
+const count = toRef(state, 'count');
 ```
 
