[build] docs: update

--- a/docs/frontend/React/4.前端常见解决方案/1-前端调试技巧.md
+++ b/docs/frontend/React/4.前端常见解决方案/1-前端调试技巧.md
@@ -88,3 +88,18 @@ while ((performance.now() - start) < duration) {
 classname变化时调试
 
 https://blog.csdn.net/zxxzxx23/article/details/90705073
+
+
+
+## Memory面板
+
+![image-20240111152207297](https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20240111152207297.png)
+
+面板中的shallowSize和RetainedSize代表什么
+
+Shallow size：对象的直接内存总数，直接内存是指对象自身占用的内存大小。
+Retained size：对象的最大保留内存，保留内存是指对象被删除后可以释放的那部分内存。
+
+ (closure)：使用函数闭包的对象
+
+(array, string, number, regexp)：一系列对象类型，其属性指向Array/String/Number/Regexp。
