--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -192,3 +192,111 @@ const { count } = toRefs(state); // count: Ref<number>
 const count = toRef(state, 'count');
 ```
 
+## effectScope
+
+`effectScope` 的作用是创建一个副作用作用域，用于隔离和管理副作用代码
+
+```ts
+const scope = effectScope();
+
+scope.run(() => {
+  onMounted(() => {
+    console.log('mounted');
+  });
+  onBeforeUnmount(() => {
+    console.log('beforeunmount');
+  });
+});
+```
+
+
+
+## provide/inject
+
+```ts
+provide('globalCount', 1000);
+
+const globalData = inject('globalCount') // 1000
+```
+
+
+
+## Directive自定义指令
+
+https://cn.vuejs.org/guide/reusability/custom-directives.html#introduction
+
+```vue
+<script setup>
+const vColor: Directive<any, string> = {
+  beforeMount: (el: HTMLDivElement, binding) => {
+    console.log('v-color', el, binding)
+    el.style.color = binding.value
+  }
+}
+</script>
+```
+
+```ts
+export type Directive<T = any, V = any> = ObjectDirective<T, V> | FunctionDirective<T, V>;
+export type DirectiveHook<T = any, Prev = VNode<any, T> | null, V = any> = (el: T, binding: DirectiveBinding<V>, vnode: VNode<any, T>, prevVNode: Prev) => void;
+```
+
+Directive泛型有两个参数，第一个是el的类型，即dom类型；第二个是自定义指令参数的类型，即binding.value的类型
+
+全局自定义指令
+
+```ts
+// ObjectDirective
+app.directive('bgcolor', {
+  beforeMount: (el: HTMLDivElement, binding) => {
+    el.style.backgroundColor = binding.value;
+  }
+});
+// FunctionDirective
+app.directive('bg-color', (el: HTMLDivElement, binding, vnode, prevVNode) => {
+  el.style.backgroundColor = binding.value;
+});
+```
+
+## 异步组件与Suspense
+
+在vue2中可以通过
+
+```vue
+<script>
+const AsyncComponent = () =>
+  import(/* webpackChunkName: "AsyncComponent" */ '../components/AsyncComponent.vue')
+</script>
+
+<template>
+  <button @click="asyncComponentShow = true">加载异步组件</button>
+  <async-component v-if="asyncComponentShow"></async-component>
+</template>
+```
+
+来导入一个异步组件，并在需要时使用
+
+而在Vue3中，导入异步组件需要使用defineAsyncComponent函数
+
+```js
+const AsyncComponent = defineAsyncComponent(() => import('./AsyncComponent.vue'));
+```
+
+并且在使用时，外部需要包裹Suspense
+
+```vue
+<template>
+	<div>
+    <Suspense>
+      <AsyncComponent />
+      <template #fallback>
+        <div>Loading...</div>
+      </template>
+    </Suspense>
+  </div>
+</template>
+```
+
+## Teleport
+
+Vue的Teleport和React的createProtal功能类似，可以把dom解构插入到指定的位置
