--- a/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
+++ b/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
@@ -223,6 +223,77 @@ function createInstrumentationGetter(isReadonly, shallow) {
 }
 ```
 
+再看createGetter方法
+
+```js
+function createGetter(isReadonly2 = false, shallow = false) {
+  return function get2(target, key, receiver) {
+    // 首先，对一些特殊属性进行处理,__v_isReactive 用于判断对象是否是reactive对象
+    if (key === "__v_isReactive") {
+      return !isReadonly2;
+    } else if (key === "__v_isReadonly") {
+      return isReadonly2;
+    } else if (key === "__v_isShallow") {
+      return shallow;
+    } else if (key === "__v_raw" && receiver === (isReadonly2 ? shallow ? shallowReadonlyMap : readonlyMap : shallow ? shallowReactiveMap : reactiveMap).get(target)) {
+      return target;
+    }
+    const targetIsArray = isArray(target);
+    if (!isReadonly2) {
+      if (targetIsArray && hasOwn(arrayInstrumentations, key)) {
+        return Reflect.get(arrayInstrumentations, key, receiver);
+      }
+      if (key === "hasOwnProperty") {
+        return hasOwnProperty;
+      }
+    }
+    const res = Reflect.get(target, key, receiver);
+    if (isSymbol(key) ? builtInSymbols.has(key) : isNonTrackableKeys(key)) {
+      return res;
+    }
+    if (!isReadonly2) {
+      track(target, "get", key);
+    }
+    if (shallow) {
+      return res;
+    }
+    if (isRef(res)) {
+      return targetIsArray && isIntegerKey(key) ? res : res.value;
+    }
+    if (isObject(res)) {
+      return isReadonly2 ? readonly(res) : reactive(res);
+    }
+    return res;
+  };
+}
+```
+
+
+
+## shallowReactive
+
+```js
+function shallowReactive(target) {
+  return createReactiveObject(
+    target,
+    false,
+    shallowReactiveHandlers,
+    shallowCollectionHandlers,
+    shallowReactiveMap
+  );
+}
+const shallowReactiveHandlers = /* @__PURE__ */ extend(
+  {},
+  mutableHandlers,
+  {
+    get: shallowGet,
+    set: shallowSet
+  }
+);
+const shallowGet = /* @__PURE__ */ createGetter(false, true);
+const shallowSet = /* @__PURE__ */ createSetter(true);
+```
+
 
 
 ### readonly
@@ -416,31 +487,6 @@ toReadonly也会将变量包装成一个Proxy对象
 
 ## 组件通信
 
-### 1. provide/inject注入
-
-https://vue3js.cn/docs/zh/guide/composition-api-provide-inject.html
-
-## Vue3自定义指令
-
-https://cn.vuejs.org/guide/reusability/custom-directives.html#introduction
-
-```vue
-<script setup>
-const vColor: Directive<any, string> = {
-  beforeMount: (el: HTMLDivElement, binding) => {
-    console.log('v-color', el, binding)
-    el.style.color = binding.value
-  }
-}
-</script>
-```
-
-```ts
-export type Directive<T = any, V = any> = ObjectDirective<T, V> | FunctionDirective<T, V>;
-```
-
-Directive泛型有两个参数，第一个是el的类型，即dom类型；第二个是自定义指令参数的类型，即binding.value的类型
-
 ### script setup内如何获取props
 
 可以使用`defineProps`函数来获取`props`
@@ -561,6 +607,11 @@ arr.splice(0) // 清空数组
 
 ```js
 const $style = useCssModule()
+// 默认情况下, 返回 <style module> 的 class
+useCssModule()
+
+// 具名情况下, 返回 <style module="classes"> 的 class
+useCssModule('classes')
 ```
 
 2.另一种是在style中使用module声明
