--- a/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
+++ b/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
@@ -44,6 +44,9 @@ function ensureRenderer() {
     return (renderer ||
         (renderer = createRenderer(rendererOptions)));
 }
+function createRenderer(options) {
+  return baseCreateRenderer(options);
+}
 ```
 
 renderer是渲染器，ensureRenderer的作用是确保渲染器存在，如不存在则创建一个渲染器。
@@ -76,9 +79,20 @@ const nodeOps = {
 }
 ```
 
+baseCreateRenderer
 
+```js
+function baseCreateRenderer(options, createHydrationFns) {
+  //...
+  return {
+    render,
+    hydrate,
+    createApp: createAppAPI(render, hydrate)
+  };
+}
+```
 
-
+baseCreateRenderer 函数返回的对象中，包含`render`渲染函数、`hydrate`用于服务端渲染的注水函数、`createApp`函数。
 
 
 
@@ -482,6 +496,95 @@ console.log(obj); // {name: "zs", age: 18}
 ### toReadonly()包装的变量
 
 toReadonly也会将变量包装成一个Proxy对象
+
+## v-memo
+
+v-memo内部由_withMemo方法实现
+
+```js
+// 没有v-memo
+_createElementVNode('ul', null, [
+  ( _openBlock(true),
+  _createElementBlock(
+    _Fragment,
+    null,
+    _renderList(_ctx.list, (item, idx) => {
+      return (
+        _openBlock(),
+        _createElementBlock('li', { key: idx }, _toDisplayString(item.id), 1 /* TEXT */)
+      );
+    }),
+    128 /* KEYED_FRAGMENT */
+  ))
+]);
+// 加上v-memo
+_withMemo(
+  [_ctx.refreshFlag],
+  () => (
+    _openBlock(),
+    // ...
+    _createElementBlock('ul', null, [
+      (_openBlock(true),
+       // ......这一段是一样的
+      _createElementBlock(
+        _Fragment,
+        null,
+        _renderList(_ctx.list, (item, idx) => {
+          return (
+            _openBlock(),
+            _createElementBlock('li', { key: idx }, _toDisplayString(item.id), 1 /* TEXT */)
+          );
+        }),
+        128 /* KEYED_FRAGMENT */
+      ))
+      // ......
+    ])
+  ), // ...
+  _cache,
+  0
+);
+```
+
+来看withMemo的源码
+
+```js
+// cache是vue组件运行时的缓存数据
+function withMemo(memo, render, cache, index) {
+  const cached = cache[index];
+  if (cached && isMemoSame(cached, memo)) {
+    return cached;
+  }
+  // 执行 render 函数获取新的结果，并命名为ret
+  const ret = render();
+  // 将当前的 memoization 结果存入 ret.memo，使用 slice() 创建一个新的数组以防止引用问题
+  ret.memo = memo.slice();
+  // 将新结果存入cache,并返回表达式右边的值
+  return cache[index] = ret;
+}
+// 接收两个参数：cached.memo 是缓存中的 memoization 结果，memo 是新计算的 memoization 结果。
+function isMemoSame(cached, memo) {
+  const prev = cached.memo;
+  // 比较二者的长度是否相同，如果不同直接返回 false。
+  if (prev.length != memo.length) {
+    return false;
+  }
+  // 遍历比较两个 memoization 结果的每个元素
+  for (let i = 0; i < prev.length; i++) {
+    // 如果有任何一个元素不相同（通过 hasChanged 函数判断），则返回 false。
+    if (hasChanged(prev[i], memo[i])) {
+      return false;
+    }
+  }
+  if (isBlockTreeEnabled > 0 && currentBlock) {
+    currentBlock.push(cached);
+  }
+  return true;
+}
+// Object.is判断两个值是否相同
+const hasChanged = (value, oldValue) => !Object.is(value, oldValue);
+```
+
+关于Object.is的文章可以看[这篇](https://fncheng.github.io/blog/frontend/JavaScript/1/3-%E7%9B%B8%E7%AD%89%E6%80%A7%E5%88%A4%E6%96%AD%E4%B8%8E%E9%9A%90%E5%BC%8F%E8%BD%AC%E6%8D%A2.html#object-is)
 
 
 
