--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -299,4 +299,5 @@ const AsyncComponent = defineAsyncComponent(() => import('./AsyncComponent.vue')
 
 ## Teleport
 
-Vue的Teleport和React的createProtal功能类似，可以把dom解构插入到指定的位置
+Vue的Teleport和React的createProtal功能类似，可以把dom结构插入到指定的位置
+
