--- a/docs/frontend/vue/Vue3/1.2Vue3是如何变快的.md
+++ b/docs/frontend/vue/Vue3/1.2Vue3是如何变快的.md
@@ -35,6 +35,8 @@ export function render(_ctx, _cache, $props, $setup, $data, $options) {
 
 ### PatchFlags
 
+PatchFlags 是 Vue.js 内部用于表示虚拟 DOM 节点更新类型的一种标志位
+
 ```js
 export const enum PatchFlags {
   TEXT = 1, // 动态文本节点
