[build] docs: update

--- a/docs/frontend/JavaScript/1/2-作用域与闭包.md
+++ b/docs/frontend/JavaScript/1/2-作用域与闭包.md
@@ -51,11 +51,13 @@ class、let定义的即便是全局对象，但不是顶层对象的属性，在
 
 > 函数和对其周围状态（**lexical environment，词法环境**）的引用捆绑在一起构成**闭包**（**closure**）。也就是说，闭包可以让你从内部函数访问外部函数作用域。在 JavaScript 中，每当函数被创建，就会在函数生成时生成闭包。
 
-简单来说,闭包就是指**能够访问其它函数内部变量的函数**
+简单来说，闭包是由函数和其他与其相关的引用环境组成的包裹体，使得函数能够在其定义的词法作用域外访问变量。
 
-闭包是个函数，而它「记住了周围发生了什么」。表现为由「一个函数」体中定义了「另个函数」
+闭包的特性：
 
-闭包就是有状态的函数对象
+- 函数嵌套：在一个函数内部定义了另一个函数
+- 内部函数引用外部函数的变量：内部函数可以访问外部函数的变量，即使外部函数已经执行完毕。
+- 外部函数返回内部函数：通常外部函数会返回内部函数，使得外部作用域的变量仍然可以被内部函数访问。
 
 ```js
 function getDate() {
