--- a/docs/frontend/JavaScript/ES6/1.深入理解Promise.md
+++ b/docs/frontend/JavaScript/ES6/1.深入理解Promise.md
@@ -228,6 +228,20 @@ runAsync(1)
 
 ### Promise.all
 
+等待所有 `Promise` 完成，并返回所有结果。如果有一个 `Promise` 失败，则返回失败的结果。
+
+**Promise.allSettled**：等待所有 `Promise` 完成，无论成功还是失败，返回每个 `Promise` 的结果。
+
+**Promise.race**：等待第一个完成的 `Promise` 并返回其结果（无论成功还是失败）。
+
+**Promise.any**：返回第一个成功的Promise结果，如果全部失败，则返回AggregateError对象。
+
+
+
+- **功能：** `Promise.all` 用于接收一个包含多个 Promise 的可迭代对象，并在所有 Promise 都成功解决时才会解决，如果其中任何一个 Promise 被拒绝（rejected），则返回的 Promise 会立即被拒绝，并以第一个被拒绝的 Promise 的错误作为拒绝原因。
+- **行为：** 返回的 Promise 解析为一个包含所有 Promise 解析值的数组，该数组的顺序与传入的 Promise 的顺序相同。
+- **适用场景：** 当需要同时等待多个异步操作都成功完成后再执行下一步操作时，通常会使用 `Promise.all`。
+
 ```js
 function makePromise(time) {
   return new Promise((resolve, reject) => {
@@ -247,6 +261,10 @@ Promise.all([makePromise(2000), makePromise(3000), makePromise(4000)]).then(
 ```
 
 ### Promise.allSettled
+
+- **功能：** `Promise.allSettled` 用于接收一个包含多个 Promise 的可迭代对象，并在所有 Promise 都被解决后返回一个 Promise，该 Promise 总是解决，不管每个 Promise 的状态是解决还是被拒绝。
+- **行为：** 返回的 Promise 解析为一个包含所有 Promise 解决状态的数组，每个数组元素都包含一个对象，该对象表示对应的 Promise 的状态和结果（如果有）。
+- **适用场景：** 当需要等待多个异步操作都完成后，无论成功或失败，都执行下一步操作时，通常会使用 `Promise.allSettled`。
 
 ```js
 Promise.allSettled([pm2, pm1, pm2, makePromise(5000)])
