--- a/docs/frontend/vue/Vue3/1.2Vue3是如何变快的.md
+++ b/docs/frontend/vue/Vue3/1.2Vue3是如何变快的.md
@@ -199,3 +199,8 @@ const component = {
 };
 ```
 
+## 性能优势
+
+Vue3比Vue2性能好的其中一点就是shallowRef的使用
+
+Vue 2 的响应式系统依赖于 `Object.defineProperty`，并且对于对象的每个属性都会进行深层递归的响应式处理。
