--- a/docs/frontend/JavaScript/1/2-作用域与闭包.md
+++ b/docs/frontend/JavaScript/1/2-作用域与闭包.md
@@ -80,6 +80,8 @@ Chrome debug 工具中可以查看闭包
 
 ![image-20200609092422638](https://minimax-1256590847.cos.ap-shanghai.myqcloud.com/img/image-20200609092422638.png)
 
+
+
 ### 闭包为什么会造成内存泄漏
 
 先看一段代码
@@ -144,4 +146,33 @@ data[2]();
 答案是都是3
 
 很明显，闭包缓存了状态
+
+
+
+### Vue的闭包
+
+当你在浏览器中调试 Vue 组件时，可能会看到类似下面的闭包特征：
+
+```js
+// Vue 组件的例子
+function VueComponent() {
+  let message = 'Hello, Vue!';
+  
+  function updateMessage(newMessage) {
+    message = newMessage;
+  }
+
+  return {
+    message,
+    updateMessage
+  };
+}
+
+const instance = VueComponent();
+console.log(instance.message); // 'Hello, Vue!'
+instance.updateMessage('New message');
+console.log(instance.message); // 'New message'
+```
+
+
 
