--- a/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
+++ b/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
@@ -94,7 +94,43 @@ function baseCreateRenderer(options, createHydrationFns) {
 
 baseCreateRenderer 函数返回的对象中，包含`render`渲染函数、`hydrate`用于服务端渲染的注水函数、`createApp`函数。
 
+## app.use
 
+Vue 核心库packages/runtime-core/src/apiCreateApp.ts
+
+```ts
+// Vue 3 源码 - apiCreateApp.ts (简化版)
+import { App, Plugin } from './apiApp' // 导入 App 类型和 Plugin 类型
+
+export function createApp(...args) {
+  const installedPlugins = /* @__PURE__ */ new WeakSet(); // 存储已安装插件的集合
+  // 创建 Vue 应用实例
+  const app = {
+    use(plugin: Plugin, ...options: any[]) {
+      // 检查插件是否已经安装过，防止重复安装
+      if (installedPlugins.has(plugin)) {
+        warn$1(`Plugin has already been applied to target app.`);
+      }
+      // 如果插件是一个对象，调用它的 install 方法
+      else if (plugin && typeof plugin.install === 'function') {
+        installedPlugins.add(plugin);
+        plugin.install(app, ...options);
+      }
+      else if (typeof plugin === 'function') {
+        // 如果插件是一个函数，直接调用，并传递应用实例和其他参数
+        installedPlugins.add(plugin);
+        plugin(app, ...options)
+      } else if (true) {
+      warn$1(`A plugin must either be a function or an object with an "install" function.`);
+      }
+      // 将插件添加到已安装集合中，防止重复安装
+      this._installedPlugins.add(plugin)
+      return app
+    }
+  }
+  return app
+}
+```
 
 
 
