--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -87,7 +87,45 @@ const renderFunc = () => h('div', 'xxx')
 
 **使用 `shallowRef`**: 如果您有一个数组对象，而不需要追踪对象属性的变化，可以使用 `shallowRef` 而不是 `ref`。`shallowRef` 只会追踪对象本身的变化，而不会深度追踪嵌套对象的属性。
 
+## shallowReactive
 
+`shallowReactive` 只追踪对象或数组的顶层属性变化，不会递归处理内部嵌套的对象属性，因此对于数组来说，它会对增删操作进行响应式处理，但不会对数组中对象的属性变化产生响应。
+
+```ts
+import { shallowReactive, watch } from 'vue';
+
+// 使用 shallowReactive 创建一个浅层响应式数组
+const data = shallowReactive([{ id: 1 }, { id: 2 }]);
+
+// 监听数组的长度变化
+watch(
+  () => data.length, // 监听数组的长度属性
+  (newLength, oldLength) => {
+    console.log('Array length changed:', newLength, oldLength);
+  }
+);
+
+// 增加一条数据
+data.push({ id: 3 }); // 触发 watch，因为数组长度发生了变化
+
+// 删除一条数据
+data.pop(); // 触发 watch，因为数组长度发生了变化
+
+// 修改对象内部属性
+data[0].id = 99; // 不会触发 watch，因为 shallowReactive 不递归监听内部属性
+```
+
+### shallowReactive和shallowRef
+
+**基本定义**：
+
+- **`shallowReactive`**：创建一个浅层响应式对象，对象的顶层属性是响应式的，但不会递归地处理内部嵌套的属性。
+- **`shallowRef`**：创建一个浅层的 `ref`，仅对值本身进行响应式处理，而不会递归处理嵌套对象的内部属性。
+
+**使用场景**：
+
+- **`shallowReactive`**：用于需要响应顶层属性变化的对象或数组场景，尤其是当对象或数组内部有大量嵌套数据时，可以避免不必要的深层追踪。例如，监听对象的增删、数组的增删，而忽略内部属性。
+- **`shallowRef`**：适用于只需要响应整体值变化的场景，例如，完全替换对象或数组，而不需要对内部属性的变化产生反应。
 
 ## watch
 
