[build] docs: update

--- a/docs/frontend/JavaScript/1/5-数据类型判断.md
+++ b/docs/frontend/JavaScript/1/5-数据类型判断.md
@@ -54,6 +54,32 @@ console.log({} instanceof Object);                   // true
 
 instanceof可以用来判断数组、对象、函数
 
+
+
+### typeof和instanceof的区别
+
+**检测对象范围**：
+
+- `typeof` 主要用于检测基本数据类型，无法准确区分对象、数组等复杂类型。
+- `instanceof` 用于检测对象的原型链，适合判断对象是否属于特定的构造函数。
+
+**返回结果**：
+
+- `typeof` 返回一个表示类型的字符串。
+- `instanceof` 返回一个布尔值。
+
+**对 `null` 的处理**：
+
+- `typeof null` 返回 `"object"`，这是一种语言设计缺陷。
+- `instanceof` 不能用于检测 `null`，因为 `null` 不是任何对象的实例。
+
+**对函数的检测**：
+
+- `typeof` 能正确识别函数类型，返回 `"function"`。
+- `instanceof` 可以用来检测函数是否为 `Function` 的实例。
+
+
+
 ### 4. Object.prototype.toString.call()
 
 **`toString()`** 方法返回一个表示该对象的字符串。
