[build] chore: 增加Algolia搜索支持

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -81,6 +81,24 @@ const renderFunc = () => h('div', 'xxx')
 </template>
 ```
 
+使用h自定义组件
+
+```vue
+<template>
+  <RenderTask></RenderTask>
+</template>
+
+<script setup lang="ts">
+const RenderTask = () => h('div', {
+  onClick: () => {
+    console.log(123);
+  }
+},'123');
+</script>
+```
+
+
+
 ## shallowRef
 
 当ref的参数是非常大且具有深层次嵌套的数组对象时，可能会导致性能问题。
