[build] docs: update

--- a/docs/frontend/React/1-2.React-Router/#35.md
+++ b/docs/frontend/React/1-2.React-Router/#35.md
@@ -223,3 +223,8 @@ root.render(
 );
 ```
 
+请注意：当Context Provider的value属性发生变化时，所有使用 `useContext` 或 `Context.Consumer` 订阅了该 `Provider` 的组件都会重新渲染。
+
+如果没有订阅该 `Context` 的组件不会受到影响，因此不会重新渲染。
+
+React 使用的是浅比较（`Object.is`），如果 `value` 是一个引用类型（比如对象或数组），即使它的内容没有变化，只要引用变了，所有消费该 `Context` 的组件都会重新渲染。
