--- a/docs/frontend/React/1-1.React学习/4.1-自定义hooks解读.md
+++ b/docs/frontend/React/1-1.React学习/4.1-自定义hooks解读.md
@@ -89,3 +89,6 @@ export default useEventListener;
 ## useRequest
 
 ## useReactive
+
+## [useAbortRequest](https://github.com/fncheng/fe/issues/36)
+
