[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -28,9 +28,20 @@ defineOptions({
 })
 ```
 
+## defineProps
 
+defineProps解构丢失响应式的问题
 
-### defineEmits
+解决办法：
+
+```ts
+const props = defineProps<Props>();
+console.log(props.id)
+```
+
+从Vue3.5开始，从 `defineProps` 返回值解构出的变量是响应式的 => 详见[官方文档](https://cn.vuejs.org/api/sfc-script-setup.html#reactive-props-destructure)
+
+## defineEmits
 
 使用 `defineEmits` 函数，你可以明确声明组件可以触发的事件
 
