--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -368,3 +368,26 @@ const AsyncComponent = defineAsyncComponent(() => import('./AsyncComponent.vue')
 
 Vue的Teleport和React的createProtal功能类似，可以把dom结构插入到指定的位置
 
+
+
+## attrs、useAttrs
+
+Attributes 继承
+
+“透传 attribute”指的是传递给一个组件，却没有被该组件声明为 [props](https://cn.vuejs.org/guide/components/props.html) 或 [emits](https://cn.vuejs.org/guide/components/events.html#defining-custom-events) 的 attribute 或者 `v-on` 事件监听器。
+
+非props、emits属性会被自动继承到组件的根元素
+
+```vue
+<span :="{ ...$attrs }">
+<span v-bind="{ ...$attrs }">
+<span :="{ ...attrs }">
+    
+<script setup lang="ts">
+import { useAttrs } from 'vue'
+const attrs = useAttrs()
+</script>
+```
+
+`{ ...$attrs }`和React的 `{ ...props }`是相同的作用。
+
