--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -41,6 +41,16 @@ console.log(props.id)
 
 从Vue3.5开始，从 `defineProps` 返回值解构出的变量是响应式的 => 详见[官方文档](https://cn.vuejs.org/api/sfc-script-setup.html#reactive-props-destructure)
 
+### withDefaults
+
+```ts
+withDefaults(props: defineProps, defaults: Record<string, any>)
+```
+
+
+
+
+
 ## defineEmits
 
 使用 `defineEmits` 函数，你可以明确声明组件可以触发的事件
@@ -325,7 +335,7 @@ app.directive('bg-color', (el: HTMLDivElement, binding, vnode, prevVNode) => {
 });
 ```
 
-## 异步组件与Suspense
+## defineAsyncComponent定义异步组件
 
 在vue2中可以通过
 
@@ -343,7 +353,7 @@ const AsyncComponent = () =>
 
 来导入一个异步组件，并在需要时使用
 
-而在Vue3中，导入异步组件需要使用defineAsyncComponent函数
+**而在Vue3中，导入异步组件需要使用defineAsyncComponent函数**
 
 ```js
 const AsyncComponent = defineAsyncComponent(() => import('./AsyncComponent.vue'));
@@ -390,4 +400,27 @@ const attrs = useAttrs()
 ```
 
 `{ ...$attrs }`和React的 `{ ...props }`是相同的作用。
+
+
+
+## Suspense
+
+```vue
+<script setup lang="ts">
+const AsyncComponent = defineAsyncComponent(() =>
+    loadWithDelay(import('./pages/AsyncComponent.vue'), 2000)
+)
+const showAsyncComponent = ref<boolean>(false)
+</script>
+
+<template>
+	<button @click="showAsyncComponent = !showAsyncComponent">show</button>
+    <Suspense>
+        <template #fallback>Loading...</template>
+        <template #default>
+            <async-component v-if="showAsyncComponent"></async-component>
+        </template>
+    </Suspense>
+</template>
+```
 
