[build] docs: update

--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -70,6 +70,109 @@ const handleClick = () => {
 </script>
 ```
 
+## defineModel
+
+我们知道v-model是 :value和@input的语法糖
+
+```vue
+<input type="text" v-model="localeId" />
+<input type="text" :value="localeId" @input="localeId = $event.target.value" />
+```
+
+上面两段代码是等效的
+
+而defineModel也是个语法糖
+
+defineModel 是对 props 和 emit 的封装，等价于以下代码：
+
+```vue
+<template>
+	<input type="text" :value="modelValue" @input="emit('update:modelValue', $event.target.value)" />
+</template>
+
+<script setup>
+defineProps({
+  modelValue: {
+    type: String,
+    default: 'Default Value',
+  },
+});
+
+const emit = defineEmits(['update:modelValue']);
+</script>
+```
+
+亦或是
+
+```vue
+<template>
+<p>id <input type="text" v-model="id2" /></p>
+</template>
+
+<script setup lang="ts">
+defineProps({
+  modelValue: {
+    type: String,
+    default: 'Default Value',
+  },
+});
+
+const emit = defineEmits(['update:modelValue']);
+const localValue = ref(props[modelValue]); // 使用响应式变量绑定父组件数据
+watch(localValue, (newValue) => {
+    emit(`update:modelValue`, newValue); // 子组件更新 -> 父组件同步
+  });
+    
+// 这里也可以用computed
+const localeId = computed({
+    get() {
+        return props.id
+    },
+    set(val) {
+        emit('update:id', val)
+    }
+})
+</script>
+```
+
+defineModel
+
+```ts
+function defineModel(name = 'modelValue') {
+  const props = defineProps({ [name]: Object });
+  const emit = defineEmits([`update:${name}`]);
+
+  const localValue = ref(props[name]); // 使用响应式变量绑定父组件数据
+
+  watch(() => props[name], (newValue) => {
+    localValue.value = newValue; // 父组件更新 -> 子组件同步
+  });
+
+  watch(localValue, (newValue) => {
+    emit(`update:${name}`, newValue); // 子组件更新 -> 父组件同步
+  });
+
+  return localValue;
+}
+```
+
+defineModel接收两个参数
+
+第一个参数是绑定的模型名称，第二个参数是配置对象
+
+```ts
+const id = defineModel('id', {
+    type: Number,
+    default: 100,
+    required: true,
+    set(v) {
+        return v
+    }
+})
+```
+
+
+
 ## v-memo
 
 https://cn.vuejs.org/api/built-in-directives.html#v-memo
