--- a/docs/frontend/React/1-1.React学习/1.2-React渲染优化.md
+++ b/docs/frontend/React/1-1.React学习/1.2-React渲染优化.md
@@ -1,3 +1,27 @@
+## React渲染机制
+
+我们知道React**初次**渲染时会自上（通常是App.tsx）而下递归渲染整个组件树
+
+而后续的**更新渲染**则和初次渲染不同，采用了局部更细机制
+
+1. 后续的更新渲染不会从根组件（如 App.tsx）开始，而是从触发状态或 props 变化的组件本身开始。具体来说：
+
+如果某个组件的状态（通过 setState 或 useState）发生变化，React 会从该组件开始重新渲染。
+如果父组件传递给子组件的 props 发生了变化，React 会对相应的子组件进行重新渲染。
+
+1. 虚拟dom比较（diff算法）：
+
+重新执行该组件的 render 方法（对于函数组件是重新执行函数体），生成新的虚拟 DOM 树。
+React 会将新的虚拟 DOM 树与上一次渲染时保存的旧的虚拟 DOM 树进行比较，找出需要更新的部分。React 的 diff 算法只会比较同一层级的节点，不会全局进行比较。
+根据 diff 结果，React 会计算出最小的 DOM 更新路径，避免不必要的重新渲染。
+
+1. 局部渲染和跳过不必要的更新：
+
+在函数组件中，可以通过 React.memo 来优化组件。如果传递的 props 没有变化，React.memo 会阻止函数组件的重新渲染。
+useMemo 和 useCallback：对于高开销的计算，可以使用 useMemo 缓存计算结果，而 useCallback 则可以缓存函数的引用，减少因函数重新定义导致的子组件更新。
+
+
+
 ## React组件缓存及渲染优化
 
 - react组件更新是自上而下的，即先父后子
