--- a/docs/frontend/React/1-1.React学习/2.1-React实现复用.md
+++ b/docs/frontend/React/1-1.React学习/2.1-React实现复用.md
@@ -133,11 +133,27 @@ class Main extends React.Component {
 
 这里的scope就是id、state的集合 ( name属性比较特殊，不会暴露出去 )
 
+## props.children
 
+```tsx
+<TestComponent component={<AsyncComponent />}>
+    <AsyncComponent />
+</TestComponent>
+```
 
-CodeSandBox.io 关于vue 使用console.log后会报错
-
-```js
-Property or method "children" is not defined on the instance but referenced during render.
+```tsx
+type TestComponentProps = {
+    component: JSX.Element
+    children: JSX.Element
+}
+export default function TestComponent({ component, children }: TestComponentProps) {
+    return (
+        <>
+            <h3>TestComponent</h3>
+            {component}
+            {children}
+        </>
+    )
+}
 ```
 
