--- a/docs/frontend/vue/Vue3/1.3-Vue3 API.md
+++ b/docs/frontend/vue/Vue3/1.3-Vue3 API.md
@@ -70,6 +70,17 @@ const handleClick = () => {
 </script>
 ```
 
+类型声明
+
+```ts
+type TestEvent = {
+    'update:info': [val?: any]
+    (e: 'update:info', val?: any): any
+}
+```
+
+
+
 ## defineModel
 
 我们知道v-model是 :value和@input的语法糖
@@ -399,6 +410,46 @@ provide('globalCount', 1000);
 const globalData = inject('globalCount') // 1000
 ```
 
+## Plugin
+
+```ts
+import { inject, type App, type ObjectPlugin } from 'vue'
+
+const myPlugin: ObjectPlugin<{ message: string }> = {
+    install(app: App, options) {
+        console.log('app: ', app)
+        // 不推荐
+        app.config.globalProperties.$myPluginMethod = () => {
+            console.log('myPluginMethod')
+        }
+        const myPluginMethod = () => {
+            console.log('myPluginMethod', options.message)
+        }
+        app.provide('myPluginMethod', myPluginMethod)
+    }
+}
+
+export function useMyPlugin() {
+    const myPluginMethod = inject<() => void>('myPluginMethod')
+    if (!myPluginMethod) {
+        throw new Error('myPlugin is not provided. Make sure to use app.use(myPlugin)!')
+    }
+    return { myPluginMethod }
+}
+
+export default myPlugin
+```
+
+使用
+
+```ts
+// main.ts
+app.use(myPlugin, { message: 'hello' })
+
+// Component
+const { myPluginMethod } = useMyPlugin()
+```
+
 
 
 ## Directive自定义指令
@@ -408,7 +459,7 @@ https://cn.vuejs.org/guide/reusability/custom-directives.html#introduction
 ```vue
 <script setup>
 const vColor: Directive<any, string> = {
-  beforeMount: (el: HTMLDivElement, binding) => {
+  beforeMount: (el: HTMLDivElement, binding, vnode, prevVNode) => {
     console.log('v-color', el, binding)
     el.style.color = binding.value
   }
@@ -437,6 +488,25 @@ app.directive('bg-color', (el: HTMLDivElement, binding, vnode, prevVNode) => {
   el.style.backgroundColor = binding.value;
 });
 ```
+
+### 编写的自定义指令如何添加编辑器提示
+
+新建types/directive.d.ts文件，声明合并
+
+```ts
+import type { FunctionDirective, ObjectDirective } from 'vue'
+
+declare module 'vue' {
+    interface ComponentCustomProperties {
+        vBgColor: ObjectDirective<any, string>
+        vColor: FunctionDirective<any, string>
+    }
+}
+```
+
+
+
+
 
 ## defineAsyncComponent定义异步组件
 
@@ -525,5 +595,117 @@ const showAsyncComponent = ref<boolean>(false)
         </template>
     </Suspense>
 </template>
+```
+
+
+
+## 动态绑定多个值
+
+```vue
+let addForm = reactive<AddFormType>({
+    name: '',
+    age: 0
+})
+
+<TestComponent v-bind="addForm" />
+```
+
+在子组件内怎么接收并使用呢
+
+```ts
+type TestProps = {
+    info: AddFormType
+    name: string
+    age: number
+}
+const props = defineProps<TestProps>()
+```
+
+注意⚠️：一定要通过类型声明来显式接收变量后方可使用对应props
+
+
+
+## 通过props传递组件和通过插槽传递组件
+
+props传递组件：
+
+```html
+<TestComponent
+	:default="AsyncComponent"
+	:info="addForm"
+	@update:info="updateInfo"
+	v-bind="addForm"
+	v-on="getData"
+	>
+    <template v-slot:default>
+        <div>slot default</div>
+    </template>
+</TestComponent>
+```
+
+对比React（通过props和props.children）
+
+```tsx
+<TestComponent component={<AsyncComponent />}>
+    <AsyncComponent />
+</TestComponent>
+
+export default function TestComponent({ component }: TestComponentProps) {
+    return (
+        <>
+            <h3>TestComponent</h3>
+            {component}
+        </>
+    )
+}
+```
+
+
+
+子组件
+
+```html
+<div>
+	<component :is="default" v-if="info.age > 25" />
+</div>
+
+<script setup lang="ts">
+type TestProps = {
+    default: Component
+}
+</script>
+```
+
+## defineSlots
+
+```ts
+defineSlots<{
+    default(props: { message: string }): any
+}>()
+```
+
+```html
+<TestComponent
+	:default="AsyncComponent"
+	:info="addForm"
+	@update:info="updateInfo"
+	v-bind="addForm"
+	v-on="getData"
+	>
+    <template v-slot:default="slotProps">
+        <p>Here is a message from parent: {{ slotProps.message }}</p>
+        <AsyncComponent :number="199" />
+    </template>
+</TestComponent>
+```
+
+slotProps是插槽传递的数据
+
+类型声明
+
+```ts
+defineSlots<{
+    default(props: { message: string }): any
+}>()
 ```
 
