--- a/docs/frontend/vue/Vue3/1.4-vue3开发准备工作.md
+++ b/docs/frontend/vue/Vue3/1.4-vue3开发准备工作.md
@@ -9,3 +9,54 @@
 具体见[vue3 文档](https://vuejs.org/guide/typescript/overview.html#volar-takeover-mode)
 
 之后就reload 项目就可以尽情使用typescript的语法提示了
+
+
+
+## 在Vue3中使用CSS module
+
+可以通过两种方式：
+
+1.一种是在setup或render中定义
+
+```js
+const $style = useCssModule()
+// 默认情况下, 返回 <style module> 的 class
+useCssModule()
+
+// 具名情况下, 返回 <style module="classes"> 的 class
+useCssModule('classes')
+```
+
+2.另一种是在style中使用module声明
+
+```vue
+<template>
+  <div :class="mystyle.red">{{ count }}</div>
+</template>
+
+<style module="mystyle">
+.red {
+  color: red;
+}
+</style>
+```
+
+添加module属性，自动注入
+
+
+
+### 在jsx中使用css module
+
+使用vite
+
+```tsx
+import styles from './MyButton1.module.css'
+
+render() {
+  <span class={styles.blue}>{this.count}</span>
+}
+```
+
+添加类名自动提示
+
+typescript-plugin-css-modules
