--- a/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
+++ b/docs/frontend/vue/Vue3/1.1学习理解Vue3.md
@@ -724,65 +724,21 @@ arr.splice(0) // 清空数组
 
 
 
+## 指令解析
 
-
-
-
-## [Ts支持](https://v3.cn.vuejs.org/guide/typescript-support.html#typescript-%E6%94%AF%E6%8C%81)
-
-
-
-### 了解script setup
-
-[Understanding the new script setup with defineProps & defineEmits in Vue 3.2](https://www.netlify.com/blog/understanding-defineprops-and-defineemits-in-vue-3.2)
-
-
-
-## 在Vue3中使用CSS module
-
-可以通过两种方式：
-
-1.一种是在setup或render中定义
-
-```js
-const $style = useCssModule()
-// 默认情况下, 返回 <style module> 的 class
-useCssModule()
-
-// 具名情况下, 返回 <style module="classes"> 的 class
-useCssModule('classes')
+```html
+<form @submit.prevent="onSubmit">...</form>
 ```
 
-2.另一种是在style中使用module声明
+<img src="https://cn.vuejs.org/assets/directive.DtZKvoAo.png" style="zoom:50%;" />
 
-```vue
-<template>
-  <div :class="mystyle.red">{{ count }}</div>
-</template>
+`v-bind:class.sync="value"` 会被解析为：
 
-<style module="mystyle">
-.red {
-  color: red;
-}
-</style>
-```
-
-添加module属性，自动注入
-
-
-
-### 在jsx中使用css module
-
-使用vite
-
-```tsx
-import styles from './MyButton1.module.css'
-
-render() {
-  <span class={styles.blue}>{this.count}</span>
+```json
+{
+  "name": "bind",
+  "arg": "class",
+  "modifiers": ["sync"]
 }
 ```
 
-添加类名自动提示
-
-typescript-plugin-css-modules
